...
        ),
        body: BlocConsumer<ShopBloc, ShopState>(
          listener: (context, state) {
            if (state is ShopUpdatedState) {
              ScaffoldMessenger.of(context).showSnackBar(
                const SnackBar(
                  content: Text('Shop updated successfully'),
                  backgroundColor: kSuccessColor, // Update to use kSuccessColor
                ),
              );
              Navigator.pop(context);
            } else if (state is ShopErrorState) {
              ScaffoldMessenger.of(context).showSnackBar(
...
                          autovalidateMode: AutovalidateMode.onUserInteraction,
                          child: Column(
                            crossAxisAlignment: CrossAxisAlignment.start,
                            children: [
                              _buildTextField(
                                  'Shop Name', _nameController, _validateName,
                                  key: const ValueKey('shop_name_field')),
                              const SizedBox(height: 20),
                              _buildTextField('Phone Number', _phoneController,
                                  _validatePhoneNumber,
                                  key: const ValueKey('phone_number_field')),
                              const SizedBox(height: 20),
                              _buildTextField(
...
                                    style: const TextStyle(fontSize: 16),
                                  ),
                                ],
                              ),
                              const SizedBox(height: 10),
                              ElevatedButton(
                                key: const ValueKey('submit_button'),
                                onPressed: () => _submitForm(context),
                                style: ElevatedButton.styleFrom(
                                  backgroundColor:
                                      kPrimaryColor, // Update to use kPrimaryColor
                                  padding: const EdgeInsets.symmetric(
                                      horizontal: 50, vertical: 15),
...
